# manokwari

./: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
data/: Makefile.in
debian/: blankon-panel.script  changelog  control  copyright  install  manokwari.script  rules
debian/patch/: series
debian/patches/: 01_binmakefile.patch  extra_panel_01.patch  extra_panel_03.patch  extra_panel_EAST.patch  extra_panel_fix.patch  lsb-release.patch  mouse-slider-corner.patch  new-style.patch  scale_vol.patch  series  set-brightness.patch
files/menus/: Makefile.in  manokwari-applications.menu
files/sessions/: Makefile.in  blankon.session
files/xsessions/: Makefile.in
po/: id.po
src/: Makefile.in  animated-property.c  main.c  panel-abstract-window.c  panel-animated-adjustment.c  panel-calendar.c  panel-clock.c  panel-desktop-data.c  panel-desktop-html.c  panel-desktop-html.vala  panel-desktop.c  panel-hotkey.c  panel-item.c  panel-menu-box.c  panel-menu-content.c  panel-menu-html.c  panel-places.c  panel-screen.c  panel-scrollable-content.c  panel-session-manager.c  panel-shell.c  panel-tray.c  panel-user.c  panel-window.c  panel-window.vala  utils.c  xdg-data.c  xdg-data.vala
system/: Makefile  Makefile.am  config.xml  desktop.css  desktop.html  desktop.js  menu.html  menu.js  style.css
system/css/: bevel.css  desktop.css  style.css
system/js/: search.js
system/widget/weather/css/: style.css
system/widget/weather/js/: script.js
