systemdir = $(libdir)/manokwari/system

system_DATA = \
	desktop.css \
	desktop.html \
	desktop.js \
	jq.js \
	menu.html \
	menu.js \
	style.css \
	bg.jpg \
	back.png \
	go-next.png \
	go-down.png \
	user.svg \
                    xml-background.js \
                    xml2json.xml \
	$(NULL)

CLEANFILES = \
	$(systemdir_DATA)
