systemdir = $(libdir)/manokwari/system

system_DATA = \
	desktop.css \
	desktop.html \
	desktop.js \
	jq.js \
	menu.html \
	menu.js \
	style.css \
	background.png\
	back.png \
	go-next.png \
	go-down.png \
        xml-background.js \
        xml2json.js \
	$(NULL)

CLEANFILES = \
	$(systemdir_DATA)
